# python_with_doc_template

./: .gitignore  LICENCE.md  README.md  mkdocs.yml  pyproject.toml  requirements.doc.txt
.github/workflows/: generate_gh_page.yml  tag_latest_release_gh_page.yml
1.0.0/: 404.html  index.html  objects.inv
1.0.0/dependencies/: index.html
1.0.0/references/SUMMARY/: index.html
1.0.0/references/function_file/: index.html
1.0.0/references/mixed_file/: index.html
1.0.0/references/module/class_file/: index.html
1.0.0/references/module/two_class_file/: index.html
1.0.0/references/src.class_file/: index.html
1.0.0/references/src.function_file/: index.html
1.0.0/search/: search_index.json
1.0.1/: 404.html  index.html
1.0.1/dependencies/: index.html
1.0.1/references/SUMMARY/: index.html
1.0.1/references/function_file/: index.html
1.0.1/references/mixed_file/: index.html
1.0.1/references/module/class_file/: index.html
1.0.1/references/module/two_class_file/: index.html
1.0.1/search/: search_index.json
latest/references/src.class_file/: index.html
latest/references/src.function_file/: index.html
scripts/: generate_index.py  generate_references.py  index.template.md
